tests/type_errors/call_non_function.nos
# expect_error: type mismatch
# Issue 19: Calling non-function value should be caught at compile time
main() = {
    f = 42
    f(10)
}
